--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 .slogan-screen {
-  width: 10rem;
+  width: 100%;
   height: 17.75rem;
   background: url(../images/bg.jpg) center center;
   background-size: 100%;
